--- a/ShopTD/Web.config
+++ b/ShopTD/Web.config
@@ -20,6 +20,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+        <identity impersonate="true" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -73,7 +74,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DB_ShopTDEntities" connectionString="metadata=res://*/Models.DB_ShopTD.csdl|res://*/Models.DB_ShopTD.ssdl|res://*/Models.DB_ShopTD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-D2M916Q\SQLEXPRESS;initial catalog=DB_ShopTD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB_ShopTDEntities" connectionString="metadata=res://*/Models.DB_ShopTD.csdl|res://*/Models.DB_ShopTD.ssdl|res://*/Models.DB_ShopTD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=300-FRS-V504\SQLEXPRESS;initial catalog=DB_ShopTD;User id=sa; Password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
